# taskgeneral-core

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: error.rs  lib.rs  models.rs  storage.rs  task_manager.rs
src/storage/pg/: mod.rs  postgres_storage.rs  postgres_storage.rs.backup  schema.rs
