[package]
name = "taskgeneral-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
taskchampion = { version = "3.0.1", features = ["storage-sqlite", "bundled", "server-sync", "tls-webpki-roots"] }
uniffi = { version = "0.28", features = ["cli"] }
tokio = { version = "1", features = ["rt", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
