[package]
name = "taskgeneral-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
taskchampion = { version = "3.0.1", features = ["storage-sqlite", "bundled", "server-sync", "tls-webpki-roots"] }
uniffi = { version = "0.28", features = ["cli"] }
tokio = { version = "1", features = ["rt", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }

# Postgres support (optional, for web backend)
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4"], optional = true }

[dev-dependencies]
postgres-native-tls = { version = "0.5", optional = false }
native-tls = "0.2"

[features]
default = []
postgres = ["dep:tokio-postgres"]
